optl+lgtp 적용(mimir 변경 예정)